Modified through Colab

--- a/l2l_0_colab.ipynb
+++ b/l2l_0_colab.ipynb
@@ -42,7 +42,8 @@
         "id": "UR30LXYZsJe9"
       },
       "source": [
-        "Pollame nudista."
+        "Pollame nudista.\n",
+        "What now?"
       ],
       "execution_count": null,
       "outputs": []
