--- a/l2l_0_colab.ipynb
+++ b/l2l_0_colab.ipynb
@@ -37,13 +37,50 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "UR30LXYZsJe9"
+        "id": "ehBJEuGBtnIS"
       },
       "source": [
-        "Pollame nudista.\n",
-        "What now?"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/QOSF-Mentorship/blob/main/l2l_0_colab.ipynb)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3Zq4Bnbttkoh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6aEd_oBHter4"
+      },
+      "source": [
+        "This is a test."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FotxLSLcti0e"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dziMmfKVtf1p"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
