Modified with Colab

--- a/l2l_0.ipynb
+++ b/l2l_0.ipynb
@@ -33,16 +33,19 @@
       "source": [
         "# Learning to Learn w\\ Quantum NN via Classical NN\n",
         "\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/QOSF-Mentorship/blob/main/l2l_0.ipynb)\n",
+        "\n",
         "This it the first jupyter notebook used to familiarize with _Pennylane_ and _RNNs_ and _LSTMs_"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ehBJEuGBtnIS"
+        "id": "kiP9yNVrw780"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/QOSF-Mentorship/blob/main/l2l_0_colab.ipynb)"
+        "**Run cell below only if using this notebook in Colab**  \n",
+        "Installing required dependencies and packages"
       ]
     },
     {
@@ -51,7 +54,8 @@
         "id": "3Zq4Bnbttkoh"
       },
       "source": [
-        ""
+        "!pip install --upgrade qiskit\n",
+        "!pip install --upgrade pennylane"
       ],
       "execution_count": null,
       "outputs": []
@@ -64,26 +68,6 @@
       "source": [
         "This is a test."
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FotxLSLcti0e"
-      },
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dziMmfKVtf1p"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
