--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -6,13 +6,33 @@
     "id": "3ByYL2o9sJe8"
    },
    "source": [
-    "# Learning to Learn w\\ Quantum NN via Classical NN\n",
+    "# Learning to Learn with Quantum NN via Classical NN\n",
     "\n",
     "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/QOSF-Mentorship/blob/main/l2l_1.ipynb)\n",
     "\n",
-    "This it the first jupyter notebook used to familiarize with _Pennylane_ and _RNNs_ and _LSTMs_.\n",
+    "The aim of this notebook is to recreate the architecture proposed by Verdon et al. in the paper *Learning to learn with quantum neural networks via classical neural networks* [[1]](#1), using **PennyLane** [[2]](#2) and **Tensorflow** [[3]](#3).\n",
     "\n",
-    "At first, the QAOA example for MAXCUT will be implemented."
+    "\n",
+    "\n",
+    "Spiegazione del modello e principali equazioni.\n",
+    "\n",
+    "| **Recurrent Neural Network Scheme** |\n",
+    "|:--:|\n",
+    "| <img src=\"image.jpg\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
+    "| Description of the architecture. |\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### References\n",
+    "<a id=\"1\">[1]</a> \n",
+    "Verdon G., Broughton M., McClean J. R., Sung K. J., Babbush R., Jiang Z., Neven H. and Mohseni M. (2019),  \n",
+    "Learning to learn with quantum neural networks via classical neural networks, [arXiv:1907.05415](https://arxiv.org/abs/1907.05415).\n",
+    "\n",
+    "<a id=\"1\">[1]</a> \n",
+    "https://pennylane.ai/\n",
+    "\n",
+    "<a id=\"1\">[1]</a> \n",
+    "https://www.tensorflow.org/"
    ]
   },
   {
