Changed Image and fiexd issues

--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -21,7 +21,7 @@
     "Recently, a big effort by the quantum computing community has been devoted towards the study of variational quantum algorithms (VQAs, for short) which leverage quantum circuits with fixed shape but with tunable parameters to solve a desired target task. The idea is similar to classical neural networks, where the weights of the net are optimized during training in order to perform best in regression or classification tasks. Similarly, once the shape of variational quantum circuit is chosen — something that is very difficult and sensitive to the particular task at hand — its tunable parameters are optimized iteratively by minimizing a cost (or loss) function, which measures how good the quantum algorithm is performing (see [[4]](#4) for a thorough overview on VQAs). \n",
     "\n",
     "\n",
-    "A major challange for VQAs relates to the optimization of tunable parameters, which was shown to be a very hard task to perform (see *barren plateus*). In particular, parameter initialization plays a key role in this scenario, since initializing the parameters in the proximity of an optimal solution leads to faster convergence and better results with respect to random initialization, which could bring the model in a region in parameter space far from any good solution. Thus, a good initialization strategy is crucial to promote the convergence of local optimizers to local extrema and to select reasonably good local minima.  \n",
+    "A major challange for VQAs relates to the optimization of tunable parameters, which was shown to be a very hard task to perform (e.g., the concept of *barren plateaus*). In particular, parameter initialization plays a key role in this scenario, since initializing the parameters in the proximity of an optimal solution leads to faster convergence and better results with respect to random initialization, which could bring the model in a region in parameter space far from any good solution. Thus, a good initialization strategy is crucial to promote the convergence of local optimizers to local extrema and to select reasonably good local minima.  \n",
     "\n",
     "One such strategy, could come from the classical machine learning literature. \n",
     "\n",
@@ -33,12 +33,12 @@
     "|  |\n",
     "|:--|\n",
     "| |\n",
-    "| <img src=\"image.jpg\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
+    "| <img src=\"CustomPicture2.png\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
     "| **Recurrent Neural Network Scheme**. Given the variational parameters of the quantum circuit $\\boldsymbol{\\theta}_{t-1}$, the cost function $y_{t-1}$, and the hidden state of the classical network $m_{t-1}$ at the previous time step, the CPU (classical computer) proposes a new guess for the parameters $\\boldsymbol{\\theta}_t$, which are then fed into the QPU (quantum computer) to evaluate the cost function $y_t$. By repeating this cycle few times, and by training the recurrent neural network's weights in order to minimize the loss function $y_t$, a good initialization heuristic for the quantum variational parameters $\\boldsymbol{\\theta}$ is found. The cost function taken into account here is given by the expectation value $\\langle H\\rangle_{\\boldsymbol{\\theta}}$, of an Hamiltonian $H$ on the quantum state $|\\psi_\\theta\\rangle$ parametrized by angles $\\boldsymbol{\\theta}$. This image is taken directly from the paper [[1]](#1).|\n",
     "\n",
     "At a given iteration, the RNN receives as input the previous cost function $y_t$ evaluated on the quantum computer, where $y_t$ is the estimate of $\\langle H\\rangle_{t}$, as well as the parameters for which the variational circuit was evaluated $\\boldsymbol{\\theta}_t$. The RNN at this time step also receives information stored in its internal hidden state from the previous time step $m_t$. The RNN itself has trainable parameters $\\phi$, and hence it applies the parameterized mapping:  \n",
     "\n",
-    "$$ m_{t+1}, \\boldsymbol{\\theta}_{t+1} = \\text{RNN}_{\\phi}(m_{t}, \\boldsymbol{\\theta}_{t}, y_{t}) $$\n",
+    "$$ h_{t+1}, \\boldsymbol{\\theta}_{t+1} = \\text{RNN}_{\\phi}(h_{t}, \\boldsymbol{\\theta}_{t}, y_{t}) $$\n",
     "\n",
     "which generates a new suggestions for the variational parameters as well as a new internal state. Upon training the weights $\\phi$, the RNN eventually learns a good heuristic to suggest optimal parameters for the quantum circuit.  \n",
     "\n",
@@ -130,6 +130,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Packages version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('\\n'.join(f'{m.__name__} {m.__version__}' for m in globals().values() if getattr(m, '__version__', None)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -162,16 +178,15 @@
    "outputs": [],
    "source": [
     "def generate_graphs(n_graphs, n_nodes, p_edge):\n",
-    "    \"\"\"\n",
-    "    Generate a list containing random graphs generated by Networkx. \n",
+    "    \"\"\"Generate a list containing random graphs generated by Networkx. \n",
     "    \n",
     "    Args:\n",
-    "    n_graphs: length of final list, that is the number of graphs to generate.\n",
-    "    n_nodes: number of nodes in each graph.\n",
-    "    p_edge: probability of having an edge between two nodes. (See Networkx's documentation)\n",
+    "        n_graphs: length of final list, that is the number of graphs to generate.\n",
+    "        n_nodes: number of nodes in each graph.\n",
+    "        p_edge: probability of having an edge between two nodes. (See Networkx's documentation)\n",
     "    \n",
     "    Returns:\n",
-    "    datapoints: list containing the generated graphs\n",
+    "        datapoints: list containing the generated graphs\n",
     "    \"\"\"\n",
     "    \n",
     "    datapoints = []\n",
@@ -223,7 +238,7 @@
     "p_edge = 3./n_nodes\n",
     "graphs = generate_graphs(n_graphs, n_nodes, p_edge)\n",
     "\n",
-    "print(f\"Sample of a random graph with {len(graphs[0].nodes)} nodes and {len(graphs[0].edges)} edges (p={p_edge:.2f})\")\n",
+    "print(f\"Example of a random graph with {len(graphs[0].nodes)} nodes and {len(graphs[0].edges)} edges (p={p_edge:.2f})\")\n",
     "nx.draw(graphs[0])"
    ]
   },
@@ -250,21 +265,18 @@
    "outputs": [],
    "source": [
     "def qaoa_from_graph(graph, n_layers = 1):\n",
-    "    \"\"\"\n",
-    "    Creates a QAOA instance of the MaxCut problem given a graph. This function uses nested functions needed\n",
+    "    \"\"\"Creates a QAOA instance of the MaxCut problem given a graph. This function uses nested functions needed\n",
     "    for the creation of the quantum circuit. When called, it instantiate the QAOA circuit for the input graph \n",
     "    and outputs a function which, upon feeding of the parameters, evaluates the MaxCut cost function for the \n",
     "    given graph. \n",
     "    \n",
     "    Args:\n",
-    "    ------\n",
-    "    graph: A graph generated with Networkx.\n",
-    "    n_layers: Number of repetitions in the QAOA ansatz.\n",
+    "        graph: A graph generated with Networkx.\n",
+    "        n_layers: Number of repetitions in the QAOA ansatz.\n",
     "    \n",
     "    Returns:\n",
-    "    ------\n",
-    "    hamiltonian: A function which, given some parameters as input, evaluates the MaxCutcost function of the \n",
-    "    QAOA quantum circuit for the specified graph.\n",
+    "        hamiltonian: A function which, given some parameters as input, evaluates the MaxCutcost function of the \n",
+    "        QAOA quantum circuit for the specified graph.\n",
     "    \"\"\"\n",
     "        \n",
     "    # Number of qubits (wires) equal to the number of nodes in the graph\n",
@@ -286,19 +298,15 @@
     "     \n",
     "    # Evaluates the cost hamiltonian\n",
     "    def hamiltonian(params, **kwargs):\n",
-    "        \"\"\"\n",
-    "        Function that evaluates the actual MaxCut cost of the QAOA, given the angles for the circuit \n",
+    "        \"\"\"Function that evaluates the actual MaxCut cost of the QAOA, given the angles for the circuit \n",
     "        and the specified graph. \n",
     "        \n",
     "        Args:\n",
-    "        ------\n",
-    "        params: List of angles for the QAOA circuit, with shape (n_layers x 2). \n",
-    "        params has the shape [angles_1, ..., angles_(n_layers)], where angles_i = [alphas_i, gammas_i].\n",
+    "            params: List of angles for the QAOA circuit, with shape (n_layers x 2). \n",
+    "            params has the shape [angles_1, ..., angles_(n_layers)], where angles_i = [alphas_i, gammas_i].\n",
     "        \n",
     "        Returns:\n",
-    "        ------\n",
-    "        cost: Cost hamiltonian evaluated with the input angles.\n",
-    "        \n",
+    "            cost: Cost hamiltonian evaluated with the input angles.\n",
     "        \"\"\"\n",
     "        # We set the default.qubit.tf device for seamless integration with Tensorflow\n",
     "        dev = qml.device('default.qubit.tf', wires=len(graph.nodes))\n",
@@ -482,20 +490,17 @@
    "outputs": [],
    "source": [
     "def rnn_iteration(inputs, graph_cost, n_layers = 1):\n",
-    "    \"\"\"\n",
-    "    This function performs a single time step in the computational graph. It takes as inputs the outputs from\n",
+    "    \"\"\"This function performs a single time step in the computational graph. It takes as inputs the outputs from\n",
     "    the previous time step and a graph cost function, and then goes through the Keras' LSTM cell whose output \n",
     "    is used to evaluated the QAOA MaxCut cost function. \n",
     "    \n",
     "    Args:\n",
-    "    ------\n",
-    "    inputs: List of inputs coming from the previous timestep: cost function, parameters, first LSTM hidden state,\n",
-    "    second LSTM hidden state. \n",
-    "    graph_cost: Cost function of a graph coming from the qaoa_from_graph function.\n",
+    "        inputs: List of inputs coming from the previous timestep: cost function, parameters, first LSTM hidden state,\n",
+    "        second LSTM hidden state. \n",
+    "        graph_cost: Cost function of a graph coming from the qaoa_from_graph function.\n",
     "    \n",
     "    Returns:\n",
-    "    ------\n",
-    "    List containing new value for the cost, parameters, and hidden states. \n",
+    "        List containing new value for the cost, parameters, and hidden states. \n",
     "    \"\"\"\n",
     "    # Unpack the inputs list containing previous cost, parameters, and hidden states (denoted as 'h' and 'c').\n",
     "    prev_cost = inputs[0]\n",
@@ -521,18 +526,15 @@
     "    return [new_cost, new_params, new_h, new_c] \n",
     "\n",
     "def recurrent_loop(graph_cost, n_layers = 1, intermediate_steps = False):\n",
-    "    \"\"\"\n",
-    "    This function actually creates the recurrent architecure, connecting multiple consecutive iterations \n",
+    "    \"\"\"This function actually creates the recurrent architecure, connecting multiple consecutive iterations \n",
     "    of the custom LSTM model creted in `rnn_iteration`.\n",
     "    \n",
     "    Args:\n",
-    "    ------\n",
-    "    graph_cost: Cost function of a graph coming from the qaoa_from_graph function.\n",
-    "    intermediate_steps: Boolean flag, set to True if you wish to store values from intermediate iterations.\n",
+    "        graph_cost: Cost function of a graph coming from the qaoa_from_graph function.\n",
+    "        intermediate_steps: Boolean flag, set to True if you wish to store values from intermediate iterations.\n",
     "\n",
     "    Returns:\n",
-    "    ------\n",
-    "    loss: Loss function driving the minimization process. \n",
+    "        loss: Loss function driving the minimization process. \n",
     "    \"\"\"\n",
     "    # Initialize starting all inputs (cost, parameters, hidden states) as zeros.\n",
     "    initial_cost = tf.zeros(shape = (1, 1))\n",
@@ -541,7 +543,7 @@
     "    initial_c = tf.zeros(shape = (1, 2*n_layers))\n",
     "    \n",
     "    # We perform five consecutive calls to 'rnn_iteration', thus creating the recurrent loop.\n",
-    "    # More iterations lead to better results, at the cost of a expensive computation.\n",
+    "    # More iterations lead to better results, at the cost of more computationally intensive simulations.\n",
     "    out0 = rnn_iteration([initial_cost, initial_params, initial_h, initial_c], graph_cost)\n",
     "    out1 = rnn_iteration(out0, graph_cost)\n",
     "    out2 = rnn_iteration(out1, graph_cost)\n",
@@ -567,7 +569,7 @@
     "$$\\cal{L}(\\phi) = {\\bf w} \\cdot {\\bf y}_t(\\phi)$$\n",
     "\n",
     "where ${\\bf y}_t(\\phi) = (y_1, \\cdots, y_5)$ is the history hamiltonian cost function from all iterations, and ${\\bf w}$ are just some coefficients. In this case we used ${\\bf w}=(0.1, 0.2, 0.3, 0.4, 0.5)$, thus giving more importance to last steps.  \n",
-    "Note that while one could directly use even just the final cost function from the last iteration to drive the learning procedure of the RNN, using also values from intermediate steps allows for a smoother suggestion routine, since even non optimal parameter suggestions from early steps are penalized using $\\cal{L}(\\phi)$.\n",
+    "Note that while one could directly use even just the final cost function from the last iteration to drive the learning procedure of the RNN, using also values from intermediate steps allows for a smoother suggestion routine, since even non-optimal parameter suggestions from early steps are penalized using $\\cal{L}(\\phi)$.\n",
     "\n",
     "---"
    ]
@@ -590,17 +592,14 @@
    "outputs": [],
    "source": [
     "def train_step(graph_cost):\n",
-    "    \"\"\"\n",
-    "    Single optimization step in the training procedure. Given the cost/circuit of a graph, it evaluates the\n",
+    "    \"\"\"Single optimization step in the training procedure. Given the cost/circuit of a graph, it evaluates the\n",
     "    corresponding loss and eventually computes the gradients and update of the prameters.\n",
     "    \n",
     "    Args:\n",
-    "    ------\n",
-    "    graph_cost: cost function of a graph coming from the qaoa_from_graph function.\n",
+    "        graph_cost: cost function of a graph coming from the qaoa_from_graph function.\n",
     "    \n",
     "    Returns:\n",
-    "    ------\n",
-    "    loss: loss for the specified graph, for current value of the parameters.\n",
+    "        loss: loss for the specified graph, for current value of the parameters.\n",
     "    \"\"\"\n",
     "    with tf.GradientTape() as tape:\n",
     "        # Evaluates cost function\n",
@@ -914,7 +913,7 @@
    "metadata": {},
    "source": [
     "*Hurray!* 🎉🎉   \n",
-    "As is it clear from the picture, that the RNN reaches a better minimum in much fewer iterations compared to standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to actually initialize the parameters of the quantum circuit arbitrarly close to a optimal solution. Then, a standard optimizator, like the SGD, can be used to fine tune the proposed parameters and reach even better solutions."
+    "As is it clear from the picture, that the RNN reaches a better minimum in much fewer iterations compared to standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to actually initialize the parameters of the quantum circuit arbitrarily close to a optimal solution. Then, a standard optimizer, like the SGD, can be used to fine tune the proposed parameters and reach even better solutions."
    ]
   },
   {
@@ -1197,17 +1196,18 @@
    "source": [
     "---  \n",
     "\n",
-    "### What's next?  \n",
+    "### Final remarks  \n",
     "\n",
     "#### Summary\n",
     "In this tutorial we saw how to use a recurrent neural network, an LSTM in particular, as a black-box optimizer to initialize the parameters in a variational quantum circuit close to an optimal solution. In order to do that, we connected MaxCut QAOA quantum circuits built with Pennylane with an LSTM built with Tensorflow, and we used a custom hybrid training routine to optimize the whole network.  \n",
     "\n",
-    "Such architecture proved itself to be a good candidate for the initialization problem of Variational Quantum Algorithms, since it reaches good optimal solutions in very few iterations. In addition, the architecture in quite general, since the same machinery can be used for graphs having a generic number of nodes.\n",
+    "Such architecture proved itself to be a good candidate for the initialization problem of Variational Quantum Algorithms, since it reaches good optimal solutions in very few iterations. In addition, the architecture is quite general, since the same machinery can be used for graphs having a generic number of nodes.\n",
     "\n",
-    "#### Future directions  \n",
+    "#### What's next? \n",
     "But the story does not end here. There are multiple ways this work could be improved. Here are a few:  \n",
     "\n",
     "- Use the proposed architecture for other VQAs other then QAOA for MaxCut. You can check the paper [[1]](#1) to get some inspiration. \n",
+    "- Scale up the simulation, using bigger graphs and longer recurrent loops. \n",
     "- While working correctly, the training routine is quite basic and it could be improved for example implementing batch learning or a stopping criterion. In addition, one could implement the `observed improvement` loss function, as used in the original paper [[1]](#1).\n",
     "- Depending on the problem, you may wish to transform the functions `rnn_iteration` and `recurrent_loop` to actual `Keras Layers` and `Models`. In this way, by compiling the model before the training takes place, `Tensorflow` can create the computational graph of the model and train more efficiently. If you're interested, below you can find a some ideas to start working on it.  \n",
     "- ...Any other ideas?\n",
@@ -1396,35 +1396,6 @@
    "source": [
     "*NOTE:*  \n",
     "This code works only for a single graph at a time, since a graph was needed to create the `QRNN` `Keras Layer` named `rnn0`. Thus, in order to actually train the RNN network for multiple graphs, the above training routine must be modified. Otherwise, you could find a way to define the model to accept as input a whole dataset of graphs, and not just single one. Still, this might prove particularly hard, since `Tensorflow` deals with tensors, and is not able to directly manage other data structures, like graphs or functions of graphs, like `qoao_from_graph`. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "#### Package version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pennylane 0.13.0-dev\n",
-      "tensorflow 2.3.1\n",
-      "networkx 2.4\n",
-      "numpy 1.18.1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('\\n'.join(f'{m.__name__} {m.__version__}' for m in globals().values() if getattr(m, '__version__', None)))"
    ]
   }
  ],
