Suggestions until generate_graphs

--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -36,7 +36,7 @@
     "| <img src=\"CustomPicture2.png\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
     "| **Recurrent Neural Network Scheme**. Given parameters $\\boldsymbol{\\theta}_{t-1}$ of the variational quantum circuit, the cost function $y_{t-1}$, and the hidden state of the classical network $m_{t-1}$ at the previous time step, the CPU (classical computer) proposes a new guess for the parameters $\\boldsymbol{\\theta}_t$, which are then fed into the QPU (quantum computer) to evaluate the cost function $y_t$. By repeating this cycle a few times, and by training the weights of the recurrent neural network to minimize the loss function $y_t$, a good initialization heuristic is found for parameters $\\boldsymbol{\\theta}$ of the variational circuit. The cost function taken into account here is given by the expectation value $\\langle H\\rangle_{\\boldsymbol{\\theta}}$, of a Hamiltonian $H$ with respect to the quantum state $|\\psi_\\theta\\rangle$ parametrized by $\\boldsymbol{\\theta}$. This image is taken directly from the paper [[1]](#1).|\n",
     "\n",
-    "At a given iteration, the RNN receives as input the previous cost function $y_t$ evaluated on the quantum computer, where $y_t$ is the estimate of $\\langle H\\rangle_{t}$, as well as the parameters for which the variational circuit was evaluated $\\boldsymbol{\\theta}_t$. The RNN at this time step also receives information stored in its internal hidden state from the previous time step $m_t$. The RNN itself has trainable parameters $\\phi$, and hence it applies the parameterized mapping:  \n",
+    "At a given iteration, the RNN receives as input the previous cost function $y_t$ evaluated on the quantum computer, where $y_t$ is the estimate of $\\langle H\\rangle_{t}$, as well as the parameters $\\boldsymbol{\\theta}_t$ for which the variational circuit was evaluated. The RNN at this time step also receives information stored in its internal hidden state from the previous time step $m_t$. The RNN itself has trainable parameters $\\phi$, and hence it applies the parameterized mapping:  \n",
     "\n",
     "$$ h_{t+1}, \\boldsymbol{\\theta}_{t+1} = \\text{RNN}_{\\phi}(h_{t}, \\boldsymbol{\\theta}_{t}, y_{t}) $$\n",
     "\n",
@@ -74,7 +74,15 @@
    },
    "source": [
     "**Run cell below only if using this notebook in Colab**  \n",
-    "If you're running this notebook on Colab, you need to install the following dependencies. On the other hand, if you're running this on your personal computer, be sure to have `Tensorflow`, `Pennylane` and `Networkx` installed (as well as standard python libraries `Numpy` and `Matplotlib`)."
+    "If you're running this notebook on Colab, you need to run the following cell to install required dependencies.\n",
+    "\n",
+    "On the other hand, if you're running this on your personal computer, be sure to have the following packages installed (including the listed standard Python libraries):\n",
+    "\n",
+    "* `Numpy`\n",
+    "* `Matplotlib`\n",
+    "* `TensorFlow`\n",
+    "* `PennyLane`\n",
+    "* `NetworkX`"
    ]
   },
   {
@@ -96,9 +104,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Importation of required packages\n",
+    "#### Importing the required packages\n",
     "\n",
-    "As already mentioned at the start of the notebook, we will use *Pennylane* for the quantum circuits execution and for its seamless integration with *Tensorflow*, which will be used for creating the RNN. "
+    "As already mentioned at the start of the notebook, we will use *Pennylane* for executing quantum circuits and for integrating seamlessly with *Tensorflow*, which will be used for creating the RNN. "
    ]
   },
   {
@@ -130,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Packages version"
+    "#### Package versions"
    ]
   },
   {
@@ -155,16 +163,16 @@
     "id": "6aEd_oBHter4"
    },
    "source": [
-    "### Generation of training data: Graphs"
+    "### Generation of training data: graphs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As for any Machine Learning project, the first step is to gather (or in our case create) a good dataset, which will be used to train the model and test its performances. In our case, we are analyzing the MaxCut problem, with deals with the problem of finding a good binary partition of nodes in a *graph*, such that the number of edges *cut* by such separation is maximized. For this reason, we start by generating some random graphs $G_{n,p}$ where:\n",
-    "- $n$ is the number of nodes in the graphs\n",
-    "- $p$ is the probability of having an edge between two nodes"
+    "As for any Machine Learning project, the first step is to gather (or in our case create) a good dataset, which will be used to train the model and test its performances. In our case, we are analyzing the MaxCut problem, which deals with the problem of finding a good binary partition of nodes in a *graph*, such that the number of edges *cut* by such separation is maximized. For this reason, we start by generating some random graphs $G_{n,p}$ where:\n",
+    "- $n$ is the number of nodes in the graphs,\n",
+    "- $p$ is the probability of having an edge between two nodes."
    ]
   },
   {
@@ -181,12 +189,12 @@
     "    \"\"\"Generate a list containing random graphs generated by Networkx. \n",
     "    \n",
     "    Args:\n",
-    "        n_graphs: length of final list, that is the number of graphs to generate.\n",
-    "        n_nodes: number of nodes in each graph.\n",
-    "        p_edge: probability of having an edge between two nodes. (See Networkx's documentation)\n",
+    "        n_graphs (int): length of final list, that is the number of graphs to generate\n",
+    "        n_nodes (int): number of nodes in each graph\n",
+    "        p_edge (float): Probability of having an edge between two nodes. (See Networkx's documentation)\n",
     "    \n",
     "    Returns:\n",
-    "        datapoints: list containing the generated graphs\n",
+    "        list: list containing the generated graphs\n",
     "    \"\"\"\n",
     "    \n",
     "    datapoints = []\n",
@@ -200,7 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An example of random graph generated using the function `generate_graphs` just defined:"
+    "An example of a random graph generated using the function `generate_graphs` just defined:"
    ]
   },
   {
