--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "### Solution: *(Classical) Recurrent Neural Networks* \n",
     "\n",
-    "By building on results from *meta learning* literature in Classical ML, authors in [[1]](#1) propose to use a Recurrent Neural Network (RNN) as a black-box controller to optimize the tunable parameters of variational quantum algorithms, as shown in the figure below. The cost function used is the expectation value $\\langle H\\rangle_{\\boldsymbol{\\theta}} = \\langle \\psi_{\\boldsymbol{\\theta}}| H|\\psi_{\\boldsymbol{\\theta}}\\rangle $ of a Hamiltonian $H$ with respect to the parametrized state $\\psi_{\\boldsymbol{\\theta}}$ evolved by applying the variational quantum circuit to the zero state.\n",
+    "By building on results from *meta learning* literature in Classical ML, authors in [[1]](#1) propose to use a Recurrent Neural Network (RNN) as a black-box controller to optimize the tunable parameters of variational quantum algorithms, as shown in the figure below. The cost function used is the expectation value $\\langle H\\rangle_{\\boldsymbol{\\theta}} = \\langle \\psi_{\\boldsymbol{\\theta}}| H|\\psi_{\\boldsymbol{\\theta}}\\rangle $ of a Hamiltonian $H$ with respect to the parametrized state $|\\psi_{\\boldsymbol{\\theta}}\\rangle $ evolved by applying the variational quantum circuit to the zero state.\n",
     "\n",
     "|  |\n",
     "|:--|\n",
