--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "### Variational Quantum Circuit: QAOA  \n",
     "\n",
-    "Now that we have a dataset, we move on by creating the QAOA quantum circuits using Pennylane's builtin libraries. In particular, using Pennylane's `qaoa` module, we will able to create fully functioning quantum circuits for the MaxCut problem, with very few lines of code."
+    "Now that we have a dataset, we move on by creating the QAOA quantum circuits using Pennylane's built-in subpackages. In particular, using Pennylane's `qaoa` module, we will able to create fully functioning quantum circuits for the MaxCut problem, with very few lines of code."
    ]
   },
   {
@@ -273,18 +273,19 @@
    "outputs": [],
    "source": [
     "def qaoa_from_graph(graph, n_layers = 1):\n",
-    "    \"\"\"Creates a QAOA instance of the MaxCut problem given a graph. This function uses nested functions needed\n",
-    "    for the creation of the quantum circuit. When called, it instantiate the QAOA circuit for the input graph \n",
+    "    \"\"\"Creates a QAOA instance of the MaxCut problem given a graph.\n",
+    "\n",
+    "    This function uses nested functions needed for the creation of the quantum circuit. When called, it instantiates the QAOA circuit for the input graph \n",
     "    and outputs a function which, upon feeding of the parameters, evaluates the MaxCut cost function for the \n",
-    "    given graph. \n",
-    "    \n",
+    "    given graph.\n",
+    "\n",
     "    Args:\n",
     "        graph: A graph generated with Networkx.\n",
     "        n_layers: Number of repetitions in the QAOA ansatz.\n",
     "    \n",
     "    Returns:\n",
-    "        hamiltonian: A function which, given some parameters as input, evaluates the MaxCutcost function of the \n",
-    "        QAOA quantum circuit for the specified graph.\n",
+    "        hamiltonian: A function which, given some parameters as input, evaluates QAOA cost function\n",
+    "        for the specified graph.\n",
     "    \"\"\"\n",
     "        \n",
     "    # Number of qubits (wires) equal to the number of nodes in the graph\n",
@@ -304,7 +305,7 @@
     "            qml.Hadamard(wires=w)\n",
     "        qml.layer(qaoa_layer, n_layers, params[0], params[1])\n",
     "     \n",
-    "    # Evaluates the cost hamiltonian\n",
+    "    # Evaluates the cost Hamiltonian\n",
     "    def hamiltonian(params, **kwargs):\n",
     "        \"\"\"Function that evaluates the actual MaxCut cost of the QAOA, given the angles for the circuit \n",
     "        and the specified graph. \n",
@@ -319,7 +320,7 @@
     "        # We set the default.qubit.tf device for seamless integration with Tensorflow\n",
     "        dev = qml.device('default.qubit.tf', wires=len(graph.nodes))\n",
     "        \n",
-    "        # ExpvalCost evaluates the Expectation value of an operator on a circuit\n",
+    "        # ExpvalCost evaluates the expectation value of an operator\n",
     "        cost = qml.ExpvalCost(circuit, cost_h, dev, interface=\"tf\",  diff_method = \"backprop\")\n",
     "        \n",
     "        return cost(params)\n",
