--- a/l2l_3.ipynb
+++ b/l2l_3.ipynb
@@ -924,7 +924,7 @@
    "metadata": {},
    "source": [
     "*Hurray!* 🎉🎉   \n",
-    "As is it clear from the picture, the RNN reaches a better minimum in much fewer iterations than the standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to actually initialize the parameters of the quantum circuit arbitrarily close to a optimal solution. Then, a standard optimizer, like the SGD, can be used to fine tune the proposed parameters and reach even better solutions."
+    "As is it clear from the picture, the RNN reaches a better minimum in a lot fewer iterations than the standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to actually initialize the parameters of the quantum circuit arbitrarily close to a optimal solution. Then, a standard optimizer, like the SGD, can be used to fine tune the proposed parameters and reach even better solutions."
    ]
   },
   {
