Cleaning folders and renaming things

--- a/Learning2Learn.ipynb
+++ b/Learning2Learn.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "|  |\n",
     "|:--|\n",
-    "| <img src=\"CustomPicture2.png\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
+    "| <img src=\"HybridLSTM.png\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
     "| **Recurrent Neural Network Scheme**. Given parameters $\\boldsymbol{\\theta}_{t-1}$ of the variational quantum circuit, the cost function $y_{t-1}$, and the hidden state of the classical network $m_{t-1}$ at the previous time step, the CPU (classical computer) proposes a new guess for the parameters $\\boldsymbol{\\theta}_t$, which are then fed into the QPU (quantum computer) to evaluate the cost function $y_t$. By repeating this cycle a few times, and by training the weights of the recurrent neural network to minimize the loss function $y_t$, a good initialization heuristic is found for parameters $\\boldsymbol{\\theta}$ of the variational circuit. The cost function taken into account here is given by the expectation value $\\langle H\\rangle_{\\boldsymbol{\\theta}}$, of a Hamiltonian $H$ with respect to the quantum state $|\\psi_\\theta\\rangle$ parametrized by $\\boldsymbol{\\theta}$. This image is taken directly from the paper [[1]](#1).|\n",
     "\n",
     "At a given iteration, the RNN receives as input the previous cost function $y_t$ evaluated on the quantum computer, where $y_t$ is the estimate of $\\langle H\\rangle_{t}$, as well as the parameters $\\boldsymbol{\\theta}_t$ for which the variational circuit was evaluated. The RNN at this time step also receives information stored in its internal hidden state from the previous time step $m_t$. The RNN itself has trainable parameters $\\phi$, and hence it applies the parametrized mapping:  \n",
