--- a/Learning2Learn.ipynb
+++ b/Learning2Learn.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# Learning to Learn with Quantum NN via Classical NN\n",
     "\n",
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/QOSF-Mentorship/blob/main/l2l_1.ipynb)\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/stfnmangini/Learning2learn/blob/main/Learning2Learn.ipynb)\n",
     "\n",
     "This notebook aims to recreate the architecture proposed by Verdon et al. in the paper *Learning to learn with quantum neural networks via classical neural networks* [[1]](#1), using **PennyLane** [[2]](#2) and **TensorFlow** [[3]](#3). PennyLane is a cross-platform Python library for differentiable programming of quantum computers, which, in this tutorial will be used to create quantum circuits and interface them with TensorFlow, an open-source platform for machine learning, here used to build a custom model of a Recurrent Neural Network (RNN).\n",
     "\n",
@@ -32,7 +32,7 @@
     "\n",
     "|  |\n",
     "|:--|\n",
-    "| <img src=\"HybridLSTM.png\" alt=\"Scheme of the proposed architecture, taken from [[1]](#1)\" width=\"600\"/> | \n",
+    "| <img src=\"./HybridLSTM.png\" alt=\"Scheme of the RNN architecture, as proposed in [[1]](#1)\" width=\"600\"/> | \n",
     "| **Recurrent Neural Network Scheme**. Given parameters $\\boldsymbol{\\theta}_{t-1}$ of the variational quantum circuit, the cost function $y_{t-1}$, and the hidden state of the classical network $h_{t-1}$ at the previous time step, the classical computer (the Recurrent Neural Network) proposes a new guess for the parameters $\\boldsymbol{\\theta}_t$, which are then fed into the quantum computer (the QAOA circuit) to evaluate the cost function $y_t$. By repeating this cycle a few times, and by training the weights of the recurrent neural network to minimize the loss function $y_t$, a good initialization heuristic is found for parameters $\\boldsymbol{\\theta}$ of the variational quantum circuit.|\n",
     "\n",
     "At a given iteration, the RNN receives as input the previous cost function $y_t$ evaluated on the quantum computer, where $y_t$ is the estimate of $\\langle H\\rangle_{t}$, as well as the parameters $\\boldsymbol{\\theta}_t$ for which the variational circuit was evaluated. The RNN at this time step also receives information stored in its internal hidden state from the previous time step $m_t$. The RNN itself has trainable parameters $\\phi$, and hence it applies the parametrized mapping:  \n",
@@ -383,21 +383,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0 - Loss = [-3.19326796]\n",
-      "Step 1 - Loss = [-3.82155533]\n",
-      "Step 2 - Loss = [-4.64066003]\n",
-      "Step 3 - Loss = [-5.35547035]\n",
-      "Step 4 - Loss = [-5.68578276]\n",
-      "Step 5 - Loss = [-5.65524931]\n",
-      "Step 6 - Loss = [-5.60867761]\n",
-      "Step 7 - Loss = [-5.70526933]\n",
-      "Step 8 - Loss = [-5.90673464]\n",
-      "Step 9 - Loss = [-6.13248962]\n",
-      "Step 10 - Loss = [-6.32379863]\n",
-      "Step 11 - Loss = [-6.47240742]\n",
-      "Step 12 - Loss = [-6.61170083]\n",
-      "Step 13 - Loss = [-6.77039115]\n",
-      "Step 14 - Loss = [-6.93776967]\n",
+      "Step 1 - Loss = [-3.19326796]\n",
+      "Step 2 - Loss = [-3.82155533]\n",
+      "Step 3 - Loss = [-4.64066003]\n",
+      "Step 4 - Loss = [-5.35547035]\n",
+      "Step 5 - Loss = [-5.68578276]\n",
+      "Step 6 - Loss = [-5.65524931]\n",
+      "Step 7 - Loss = [-5.60867761]\n",
+      "Step 8 - Loss = [-5.70526933]\n",
+      "Step 9 - Loss = [-5.90673464]\n",
+      "Step 10 - Loss = [-6.13248962]\n",
+      "Step 11 - Loss = [-6.32379863]\n",
+      "Step 12 - Loss = [-6.47240742]\n",
+      "Step 13 - Loss = [-6.61170083]\n",
+      "Step 14 - Loss = [-6.77039115]\n",
+      "Step 15 - Loss = [-6.93776967]\n",
       "\n",
       "Final cost function: [-7.07072686]\n",
       "Optimized angles: [[0.53574044]\n",
@@ -421,7 +421,7 @@
     "        \n",
     "    gradients = tape.gradient(loss, [x])\n",
     "    opt.apply_gradients(zip(gradients, [x]))\n",
-    "    print(f\"Step {_} - Loss = {loss}\")\n",
+    "    print(f\"Step {_+1} - Loss = {loss}\")\n",
     "    \n",
     "print(f\"\\nFinal cost function: {cost(x).numpy()}\\nOptimized angles: {x.numpy()}\")"
    ]
@@ -646,35 +646,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0\n",
-      " > Graph 0/20 - Loss: -1.6641689538955688\n",
-      " > Graph 5/20 - Loss: -1.4186843633651733\n",
-      " > Graph 10/20 - Loss: -1.3757232427597046\n",
-      " > Graph 15/20 - Loss: -1.294339656829834\n",
-      " >> Mean Loss during epoch: -1.7352586269378663\n",
       "Epoch 1\n",
-      " > Graph 0/20 - Loss: -2.119091749191284\n",
-      " > Graph 5/20 - Loss: -1.4789190292358398\n",
-      " > Graph 10/20 - Loss: -1.3779840469360352\n",
-      " > Graph 15/20 - Loss: -1.2963457107543945\n",
-      " >> Mean Loss during epoch: -1.8252217948436738\n",
+      " > Graph 1/20 - Loss: -1.6641689538955688\n",
+      " > Graph 6/20 - Loss: -1.4186843633651733\n",
+      " > Graph 11/20 - Loss: -1.3757232427597046\n",
+      " > Graph 16/20 - Loss: -1.294339656829834\n",
+      " >> Mean Loss during epoch: -1.7352586269378663\n",
       "Epoch 2\n",
-      " > Graph 0/20 - Loss: -2.1322619915008545\n",
-      " > Graph 5/20 - Loss: -1.459418535232544\n",
-      " > Graph 10/20 - Loss: -1.390620470046997\n",
-      " > Graph 15/20 - Loss: -1.3165746927261353\n",
-      " >> Mean Loss during epoch: -1.8328069806098939\n",
+      " > Graph 1/20 - Loss: -2.119091749191284\n",
+      " > Graph 6/20 - Loss: -1.4789190292358398\n",
+      " > Graph 11/20 - Loss: -1.3779840469360352\n",
+      " > Graph 16/20 - Loss: -1.2963457107543945\n",
+      " >> Mean Loss during epoch: -1.8252217948436738\n",
       "Epoch 3\n",
-      " > Graph 0/20 - Loss: -2.1432175636291504\n",
-      " > Graph 5/20 - Loss: -1.476362943649292\n",
-      " > Graph 10/20 - Loss: -1.3938289880752563\n",
-      " > Graph 15/20 - Loss: -1.3140206336975098\n",
-      " >> Mean Loss during epoch: -1.8369774043560028\n",
+      " > Graph 1/20 - Loss: -2.1322619915008545\n",
+      " > Graph 6/20 - Loss: -1.459418535232544\n",
+      " > Graph 11/20 - Loss: -1.390620470046997\n",
+      " > Graph 16/20 - Loss: -1.3165746927261353\n",
+      " >> Mean Loss during epoch: -1.8328069806098939\n",
       "Epoch 4\n",
-      " > Graph 0/20 - Loss: -2.1429405212402344\n",
-      " > Graph 5/20 - Loss: -1.477513074874878\n",
-      " > Graph 10/20 - Loss: -1.3909202814102173\n",
-      " > Graph 15/20 - Loss: -1.315887689590454\n",
+      " > Graph 1/20 - Loss: -2.1432175636291504\n",
+      " > Graph 6/20 - Loss: -1.476362943649292\n",
+      " > Graph 11/20 - Loss: -1.3938289880752563\n",
+      " > Graph 16/20 - Loss: -1.3140206336975098\n",
+      " >> Mean Loss during epoch: -1.8369774043560028\n",
+      "Epoch 5\n",
+      " > Graph 1/20 - Loss: -2.1429405212402344\n",
+      " > Graph 6/20 - Loss: -1.477513074874878\n",
+      " > Graph 11/20 - Loss: -1.3909202814102173\n",
+      " > Graph 16/20 - Loss: -1.315887689590454\n",
       " >> Mean Loss during epoch: -1.8371947884559632\n"
      ]
     }
@@ -687,14 +687,14 @@
     "epochs = 5\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    print(f\"Epoch {epoch}\")\n",
+    "    print(f\"Epoch {epoch+1}\")\n",
     "    total_loss = np.array([])\n",
     "    for i, graph_cost in enumerate(graph_cost_list):\n",
     "        loss = train_step(graph_cost)\n",
     "        total_loss = np.append(total_loss, loss.numpy())\n",
     "        # Log every 5 batches.\n",
     "        if i % 5 == 0:\n",
-    "            print(f\" > Graph {i}/{len(graph_cost_list)} - Loss: {loss[0][0]}\")\n",
+    "            print(f\" > Graph {i+1}/{len(graph_cost_list)} - Loss: {loss[0][0]}\")\n",
     "    print(f\" >> Mean Loss during epoch: {np.mean(total_loss)}\")"
    ]
   },
@@ -825,7 +825,7 @@
    "source": [
     "#### Comparison with standard Stochastic Gradient Descent (SGD)\n",
     "\n",
-    "That's remarkable! The RNN learned to propose new parameters such that the MaxCut cost is minimized very rapidly: in just few iterations the loss reaches a minimum ***— actually, just after one single step, the LSTM finds a very good minimum***. But how well does this method compare with standard optimization techniques, for example, leveraging Stochastic Gradient Descent (SGD) to optimize the parameters in the QAOA?  \n",
+    "That's remarkable! The RNN learned to propose new parameters such that the MaxCut cost is minimized very rapidly: in just few iterations the loss reaches a minimum — actually, just after one single step, the LSTM finds a very good minimum. But how well does this method compare with standard optimization techniques, for example, leveraging Stochastic Gradient Descent (SGD) to optimize the parameters in the QAOA?  \n",
     "\n",
     "Let's check it out. "
    ]
@@ -839,21 +839,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0 - Loss = [-4.1700805]\n",
-      "Step 1 - Loss = [-4.67503588]\n",
-      "Step 2 - Loss = [-5.09949909]\n",
-      "Step 3 - Loss = [-5.40388533]\n",
-      "Step 4 - Loss = [-5.59529203]\n",
-      "Step 5 - Loss = [-5.70495197]\n",
-      "Step 6 - Loss = [-5.7642561]\n",
-      "Step 7 - Loss = [-5.79533198]\n",
-      "Step 8 - Loss = [-5.81138752]\n",
-      "Step 9 - Loss = [-5.81966529]\n",
-      "Step 10 - Loss = [-5.82396722]\n",
-      "Step 11 - Loss = [-5.82624537]\n",
-      "Step 12 - Loss = [-5.82749126]\n",
-      "Step 13 - Loss = [-5.82820626]\n",
-      "Step 14 - Loss = [-5.82864379]\n",
+      "Step 1 - Loss = [-4.1700805]\n",
+      "Step 2 - Loss = [-4.67503588]\n",
+      "Step 3 - Loss = [-5.09949909]\n",
+      "Step 4 - Loss = [-5.40388533]\n",
+      "Step 5 - Loss = [-5.59529203]\n",
+      "Step 6 - Loss = [-5.70495197]\n",
+      "Step 7 - Loss = [-5.7642561]\n",
+      "Step 8 - Loss = [-5.79533198]\n",
+      "Step 9 - Loss = [-5.81138752]\n",
+      "Step 10 - Loss = [-5.81966529]\n",
+      "Step 11 - Loss = [-5.82396722]\n",
+      "Step 12 - Loss = [-5.82624537]\n",
+      "Step 13 - Loss = [-5.82749126]\n",
+      "Step 14 - Loss = [-5.82820626]\n",
+      "Step 15 - Loss = [-5.82864379]\n",
       "Final cost function: [-5.78429065]\n",
       "Optimized angles: [[0.53574044]\n",
       " [1.2945652 ]]\n"
@@ -880,7 +880,7 @@
     "    \n",
     "    gradients = tape.gradient(loss, [x0])\n",
     "    opt.apply_gradients(zip(gradients, [x0]))\n",
-    "    print(f\"Step {_} - Loss = {loss}\")\n",
+    "    print(f\"Step {_+1} - Loss = {loss}\")\n",
     "    \n",
     "print(f\"Final cost function: {new_cost(x).numpy()}\\nOptimized angles: {x.numpy()}\")"
    ]
@@ -924,8 +924,8 @@
    "metadata": {},
    "source": [
     "*Hurray!* 🎉🎉   \n",
-    "As is it clear from the picture, the RNN reaches a better minimum in fewer (but comparable) iterations than the standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to initialize the parameters of the quantum circuit in the close proximity of an optimal solution. Then, a standard optimizer, like the SGD, can be used to fine-tune the proposed parameters and reach even better solutions.  \n",
-    "While on this small scale example the benefits of using an LSTM to initialize parameters may seem modest, on more complicated instances or problems it can make a big difference, since on random initialization of the parameters standard local optimizer may encounter problems finding a good minimization direction (for further details, see [[1,4]](#1))."
+    "As is it clear from the picture, the RNN reaches a better minimum in fewer (but comparable) iterations than the standard SGD (Stochastic Gradient Descent). Thus, as the authors suggest, the (trained) RNN can be used for few iterations at the start of the training procedure to initialize the parameters of the quantum circuit close to an optimal solution. Then, a standard optimizer like the SGD, can be used to fine-tune the proposed parameters and reach even better solutions.  \n",
+    "While on this small scale example the benefits of using an LSTM to initialize parameters may seem modest, on more complicated instances and problems it can make a big difference, since, on random initialization of the parameters, standard local optimizer may encounter problems finding a good minimization direction (for further details, see [[1,4]](#1))."
    ]
   },
   {
@@ -1042,20 +1042,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0\n",
-      " > Graph 0/15 - Loss: [[-2.3892174]]\n",
-      " > Graph 5/15 - Loss: [[-2.1072261]]\n",
-      " > Graph 10/15 - Loss: [[-1.957976]]\n",
-      " >> Mean Loss during epoch: -2.0667606353759767\n",
       "Epoch 1\n",
-      " > Graph 0/15 - Loss: [[-2.3797882]]\n",
-      " > Graph 5/15 - Loss: [[-2.2293403]]\n",
-      " > Graph 10/15 - Loss: [[-1.9649515]]\n",
-      " >> Mean Loss during epoch: -2.117209537823995\n",
+      " > Graph 1/15 - Loss: [[-2.3892174]]\n",
+      " > Graph 6/15 - Loss: [[-2.1072261]]\n",
+      " > Graph 11/15 - Loss: [[-1.957976]]\n",
+      " >> Mean Loss during epoch: -2.0667606353759767\n",
       "Epoch 2\n",
-      " > Graph 0/15 - Loss: [[-2.3686786]]\n",
-      " > Graph 5/15 - Loss: [[-2.2524612]]\n",
-      " > Graph 10/15 - Loss: [[-1.9757932]]\n",
+      " > Graph 1/15 - Loss: [[-2.3797882]]\n",
+      " > Graph 6/15 - Loss: [[-2.2293403]]\n",
+      " > Graph 11/15 - Loss: [[-1.9649515]]\n",
+      " >> Mean Loss during epoch: -2.117209537823995\n",
+      "Epoch 3\n",
+      " > Graph 1/15 - Loss: [[-2.3686786]]\n",
+      " > Graph 6/15 - Loss: [[-2.2524612]]\n",
+      " > Graph 11/15 - Loss: [[-1.9757932]]\n",
       " >> Mean Loss during epoch: -2.1220582803090413\n"
      ]
     }
@@ -1068,14 +1068,14 @@
     "epochs = 3\n",
     "\n",
     "for epoch in range(epochs):\n",
-    "    print(f\"Epoch {epoch}\")\n",
+    "    print(f\"Epoch {epoch+1}\")\n",
     "    total_loss = np.array([])\n",
     "    for i, graph_cost in enumerate(gs_cost_list):\n",
     "        loss = train_step(graph_cost)\n",
     "        total_loss = np.append(total_loss, loss.numpy())\n",
     "        # Log every 5 batches.\n",
     "        if i % 5 == 0:\n",
-    "            print(f\" > Graph {i}/{len(gs_cost_list)} - Loss: {loss}\")\n",
+    "            print(f\" > Graph {i+1}/{len(gs_cost_list)} - Loss: {loss}\")\n",
     "    print(f\" >> Mean Loss during epoch: {np.mean(total_loss)}\")"
    ]
   },
@@ -1414,16 +1414,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0 - Loss = [[-2.014311]] - Cost = [-6.05823489]\n",
-      "Step 1 - Loss = [[-2.0410357]] - Cost = [-6.1869224]\n",
-      "Step 2 - Loss = [[-2.0691178]] - Cost = [-6.31767668]\n",
-      "Step 3 - Loss = [[-2.099209]] - Cost = [-6.45284001]\n",
-      "Step 4 - Loss = [[-2.1298494]] - Cost = [-6.58368088]\n",
+      "Step 1 - Loss = [[-2.014311]] - Cost = [-6.05823489]\n",
+      "Step 2 - Loss = [[-2.0410357]] - Cost = [-6.1869224]\n",
+      "Step 3 - Loss = [[-2.0691178]] - Cost = [-6.31767668]\n",
+      "Step 4 - Loss = [[-2.099209]] - Cost = [-6.45284001]\n",
+      "Step 5 - Loss = [[-2.1298494]] - Cost = [-6.58368088]\n",
       "Final Loss: [[-2.1298494]]\n",
       "Final Outs:\n",
-      " >Step 0: [[-0.01035318 -0.00192326]]\n",
-      " >Step 1: [[-0.06707703  0.19985358]]\n",
-      " >Step 2: [[-0.10908641  0.37953332]]\n",
+      " >Step 1: [[-0.01035318 -0.00192326]]\n",
+      " >Step 2: [[-0.06707703  0.19985358]]\n",
+      " >Step 3: [[-0.10908641  0.37953332]]\n",
       " >Loss: [[-2.1298494]]\n"
      ]
     }
@@ -1448,11 +1448,11 @@
     "            \n",
     "    gradients = tape.gradient(loss, model.trainable_variables)\n",
     "    opt.apply_gradients(zip(gradients, model.trainable_variables))\n",
-    "    print(f\"Step {_} - Loss = {loss} - Cost = {qaoa_from_graph(_graph, n_layers=p)(np.reshape(pred[2].numpy(),(2, p)))}\")\n",
+    "    print(f\"Step {_+1} - Loss = {loss} - Cost = {qaoa_from_graph(_graph, n_layers=p)(np.reshape(pred[2].numpy(),(2, p)))}\")\n",
     "    \n",
     "print(\"Final Loss:\", loss.numpy())\n",
     "print(\"Final Outs:\")\n",
-    "for t, s in zip(pred, [\"Step 0\",\"Step 1\",\"Step 2\",\"Loss\"]):\n",
+    "for t, s in zip(pred, [\"Step 1\",\"Step 2\",\"Step 3\",\"Loss\"]):\n",
     "    print(f\" >{s}: {t.numpy()}\")"
    ]
   },
